--- a/mpit-bims-25/app/globals.css
+++ b/mpit-bims-25/app/globals.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
     
@@ -15,5 +11,5 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Nunito, sans-serif;
 }
